<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/la_carta"
            android:icon="@drawable/ic_room_service"
            android:tint="@color/button_grey"
            android:title="@string/la_carta" />
        <item
            android:id="@+id/jugos_desayunos"
            android:icon="@drawable/ic_local_cafe"
            android:tint="@color/button_grey"
            android:title="@string/jugos_y_desayunos" />
        <item
            android:id="@+id/historia"
            android:icon="@drawable/ic_history"
            android:tint="@color/button_grey"
            android:title="@string/historia" />
        <item
            android:id="@+id/pago"
            android:icon="@drawable/ic_credit_card"
            android:tint="@color/button_grey"
            android:title="@string/pago" />
        <item
            android:id="@+id/promociones"
            android:icon="@drawable/ic_notifications"
            android:tint="@color/button_grey"
            android:title="@string/promociones" />
        <item
            android:id="@+id/notificaciones"
            android:icon="@drawable/ic_book"
            android:tint="@color/button_grey"
            android:title="@string/notificaciones" />
        <item
            android:id="@+id/configuracion"
            android:icon="@drawable/ic_settings"
            android:tint="@color/button_grey"
            android:title="@string/configuraci_n" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app"
            android:tint="@color/button_grey"
            android:title="@string/logout" />
    </group>
</menu>
