<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="25dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/visa"/>
        <EditText
            android:id="@+id/numTarjeta"
            android:backgroundTint="@color/ufood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/n_mero_de_tarjeta"
            android:textColorHint="@color/medium_grey"
            android:gravity="start"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/numMM"
            android:backgroundTint="@color/ufood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mm"
            android:textColorHint="@color/medium_grey"
            android:layout_weight="2"
            android:maxLength="2"
            android:inputType="number"/>
        <EditText
            android:id="@+id/numYYYY"
            android:backgroundTint="@color/ufood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yyyy"
            android:maxLength="4"
            android:textColorHint="@color/medium_grey"
            android:layout_weight="2"
            android:inputType="number"/>
        <EditText
            android:id="@+id/numCVV"
            android:backgroundTint="@color/ufood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvv"
            android:maxLength="3"
            android:textColorHint="@color/medium_grey"
            android:layout_weight="2"
            android:inputType="number"/>
    </LinearLayout>
    <Button
        android:id="@+id/butAddTarjeta"
        android:background="@color/ufood"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_height="35dp"
        android:text="@string/a_adir_tarjeta"/>

</LinearLayout>