<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    android:orientation="vertical"
    android:background="@drawable/login_img">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/transparente2"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ufood"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="80sp"
            android:elevation="5dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparente">
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <EditText
                android:id="@+id/eteUsuario"
                android:backgroundTint="@color/ufood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:textColorHint="@color/white"
                android:text="javillasantet@gmail.com"
                android:inputType="text"/>
            <EditText
                android:text="ufoodulima"
                android:id="@+id/etePassword"
                android:backgroundTint="@color/ufood"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </LinearLayout>
        <Button
            android:id="@+id/butLogin"
            android:layout_alignParentBottom="true"
            android:background="@color/ufood"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_height="60dp"
            android:text="@string/login"/>
    </RelativeLayout>
</LinearLayout>
